# msme_project

./: .env.example  CLEANUP_SUMMARY.md  SETUP_GUIDE.md  pyproject.toml  readme.md  render.yaml
backend/: .dockerignore  Dockerfile  Support_docs_json_format.txt  conda_packages.txt  main.py  requirements.txt  test_agent_registration.py
backend/templates/: index.html
env/Scripts/: activate  activate.bat
insurance_bot_agents/: PACKAGE_SETUP_COMPLETE.md  QUICK_START.md  README.md  __init__.py  mcp_agents.py  pyproject.toml  requirements.txt
insurance_bot_agents/insurance_bot_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
langgraph-chatbot-frontend/: execution_doc.txt  index.html  package-lock.json  package.json
msme_chatbot_agents/: INSTALLATION.md  README.md  REBUILD_GUIDE.md  __init__.py  mcp_agent_tools.py  mcp_agents.py  pyproject.toml  remote_mcp_server_execution.txt
msme_chatbot_agents/msme_chatbot_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
